--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "d3": "^7.6.1",
-    "typescript": "^5.2.2",
+    "pinia": "^2.1.7",
+    "typescript": "^5.5.2",
     "vue": "^3.3.4",
     "vue-facing-decorator": "^3.0.4",
     "vue-router": "4",
